Fixed overflow on scroll right w sceens > 800px

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 body {
   /* margin-right: -100px; */
   /* padding-right: -50px; */
+  max-width: 100vw;
   margin: 0px;
   padding: 0px;
   background-color: #333333;
