--- a/src/componentsForGlobalUse/Television/TelevisionScreen/index.scss
+++ b/src/componentsForGlobalUse/Television/TelevisionScreen/index.scss
@@ -11,14 +11,16 @@ $tv-brown-button-panel: #6c6518;
     height: 365px;   // THIS DOESNT SEEM TO AFFECT ANYTHING. 
 
 }
-@media screen and (max-width: 788px) and (min-width: 622px)  { 
+@media screen and (max-width: 1000px) and (min-width: 622px)  { 
 // @media screen and (max-width: 2472px) and (min-width: 1245px) {  // 13" Macbook = 2560 x 1600 px. 
     .screen-responsive {    //  for the image on the screen
         border-radius: 7.5%;   
-        height: 46.08vw;  // Height as % would be overriden by width. 
+        height: 31.58vw;  // Height as % would be overriden by width. 
         width: 65.05%;
         // position: absolute;  // any position option ruins this working! 
         margin-right: 10.0vw;
+        position: relative;
+
     }
 }
 @media screen and (max-width: 621px) {  // DONE 
